fixed alignment

--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ p {
 .navigation {
     position: absolute;
     top: 6rem;
-    right:0;
+    right:2rem;
     cursor: pointer;
 }
 
